Using Batch mapping for listing authors for books